--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Gnome/Ubuntu Calculator</h1>
+    <h1>Ubuntu Gnome Calculator</h1>
     <div class="container-1">
         <div class="container">
             <p class="display"></p>
